--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,9 @@
   <ul>
     {% if current_user.is_authenticated %}
       <li><span>{{ current_user.username }}</span>
+        {% if current_user.role == "admin" %}
+          <li><a href="{{ url_for('auth.add_collaborator') }}">Add Collaborator</a></li>
+        {% endif %}
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Register</a>
