--- a/app/templates/note_view.html
+++ b/app/templates/note_view.html
@@ -7,8 +7,10 @@
 {% endblock %}
 
 {% block content %}
-  {{ author.username }}
+  Created by {{ author[0].username }}<br>
+  created: {{ note.created_at }}, update: {{ note.updated_at }}
   <p>{{ note.body }}</p>
   <a href="{{ url_for("notes.index") }}"><button>Go to index</button></a>
   <a href="{{ url_for("notes.delete_note", note_id=note.id) }}"><button>Delete NOTE</button></a>
+  <a href="{{ url_for("notes.edit_note", note_id=note.id) }}"><button>Edit NOTE</button></a>
 {% endblock %}
