--- a/app/templates/create_note.html
+++ b/app/templates/create_note.html
@@ -8,7 +8,9 @@
 {% block content %}
   <form method="post">
     <label for="title">title</label>
-    <input name="title" id="title" required>
+    <input name="title" id="title" required><br>
+    <label for="tags">tags</label>
+  <input name="tags" id="tags" value=""><br>
     <label for="content">content</label>
     <textarea name="content" id="content" rows="8" cols="50" required></textarea>
     <input type="submit" value="Submit">
