--- a/app/templates/edit_note.html
+++ b/app/templates/edit_note.html
@@ -8,10 +8,12 @@
 
 {% block content %}
   <form method="post">
-    <label for="title">title</label>
-  <input name="title" id="title" value="{{ note.title }}" required>
-    <label for="content">content</label>
-  <textarea name="content" id="content" rows="8" cols="50" required>{{ note.body }}</textarea>
+    <label for="title">title</label><br>
+  <input name="title" id="title" value="{{ note.title }}" required><br>
+    <label for="tags">tags</label><br>
+  <input name="tags" id="tags" value=""><br>
+    <label for="content">content</label><br>
+  <textarea name="content" id="content" rows="8" cols="50" required>{{ note.body }}</textarea><br>
     <input type="submit" value="Submit">
   </form>
 {% endblock %}
